--- a/deploy/no-branch-dev/devops-sample-svc.yaml
+++ b/deploy/no-branch-dev/devops-sample-svc.yaml
@@ -5,7 +5,7 @@ metadata:
     app: kubesphere
     component: ks-sample-dev
   name: ks-sample-dev
-  namespace: java-example
+  namespace: kubesphere-sample-dev
 spec:
   ports:
     - name: http
